# PADHS

./: .gitignore  CMakeLists.txt  README.md
lab1/: Dockerfile  README.md  benchmark.c
lab2/: README.md
lab3/: README.md  docker-compose.yaml
lab3/aggregator/: Dockerfile  aggregator.py
lab3/generator/: Dockerfile  config.json  generator.py
lab3/processor/: Dockerfile  processor.py
lab4/: README.md  alembic.ini  pyproject.toml
lab4/deploy/: docker-compose.yaml
lab4/deploy/config/: .env.sample
lab4/src/: alembic.ini
lab4/src/api/: app.py
lab4/src/api/controller/: exceptions.py
lab4/src/api/controller/middleware/: exception.py  logging.py
lab4/src/api/controller/routers/: contracts.py
lab4/src/api/routers/: scanner.py
lab4/src/api/service/: contract.py
lab4/src/common/amqp/: base.py  session.py
lab4/src/common/amqp/producer/: contract.py
lab4/src/common/config/: database.py  logging.py
lab4/src/common/database/: session.py
lab4/src/common/database/dao/: contract.py
lab4/src/common/database/entity/: __init__.py  base.py  contract.py
lab4/src/common/database/migrations/: env.py
lab4/src/common/database/migrations/versions/: 2024_03_26_add_contract_table.py
lab4/src/common/model/: types.py
lab4/src/common/model/exceptions/: base.py  common.py
lab4/src/config/: database.py  messaging.py
lab4/src/database/: session.py
lab4/src/database/dao/: contract.py
lab4/src/database/entity/: __init__.py  contract.py
lab4/src/database/migrations/: env.py
lab4/src/database/migrations/versions/: 2024_03_26_add_contract_table.py
lab4/src/model/mapper/: contract.py
lab4/src/model/structs/dto/: contract.py
lab4/src/model/structs/exceptions/: common.py
lab4/src/scanner/: app.py  contract.py
lab4/src/service/: contract.py
lab4/test/: stresser.py
lab5/: .gitignore  README.md  pyproject.toml
lab5/deploy/: docker-compose.yaml  openapi.yaml
lab5/deploy/config/: .env.sample
lab5/deploy/config/prometheus/: prometheus.yml
lab5/deploy/config/tempo/: tempo.yml
lab5/src/api/model/schemas/: test.py
lab5/src/api/service/: contract.py
lab5/src/common/amqp/: session.py
lab5/src/common/config/: amqp.py  tracing.py
lab5/src/common/database/: session.py
lab5/src/common/utils/: tracing.py  url.py
lab5/src/scanner/: contract.py
lab5/test/: stresser.py
lab6/: README.md  pyproject.toml
lab6/deploy/: docker-compose.yaml
lab6/deploy/config/: .env.sample
lab6/deploy/config/alertmanager/: alertmanager.yml.sample
lab6/deploy/config/grafana/provisioning/dashboards/: loki.json  observability.json  redis.json
lab6/deploy/config/grafana/provisioning/datasources/: datasource.yml
lab6/deploy/config/prometheus/: prometheus.yml
lab6/src/api/: app.py
lab6/src/api/controller/: metrics.py
lab6/src/api/controller/middleware/: prometheus.py  tracing.py
lab6/src/api/controller/routers/: contracts.py
lab6/src/api/model/schemas/: contract.py
lab6/src/api/service/: contract.py  testing.py
lab6/src/common/amqp/: base.py
lab6/src/common/amqp/dto/: contract.py
lab6/src/common/cache/: constance.py  session.py
lab6/src/common/config/: cache.py  logging.py
lab6/src/common/database/dao/: contract.py
lab6/src/common/database/entity/: contract.py
lab6/src/scanner/: app.py  contract.py
lab6/src/warmup/: app.py
lab6/test/: stresser.py
lab7/: README.md  pyproject.toml
lab7/deploy/: Dockerfile  docker-compose.yaml
lab7/deploy/config/: nginx.conf
lab7/src/client/: client.py
lab7/src/proto/: hello.proto  hello_pb2.py  hello_pb2_grpc.py
lab7/src/server/: server.py
(+12 files in other folders)
