[tool.poetry]
name = "lab4"
version = "0.1.0"
description = ""
authors = ["Ivan Krasnopolsky <i1.krasnopolskiy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
fastapi = "^0.110.0"
loguru = "^0.7.2"
pika = "^1.3.2"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python = "^3.11"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
mysqlclient = "^2.2.4"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
toml-sort = "^0.23.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
exclude = '(\.git|\.cache|\.venv|\.idea|__pycache__)'
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
skip = ["**/__pycache__/**", ".cache", ".git", ".idea", ".venv"]
