[tool.poetry]
authors = ["Ivan Krasnopolsky <i1.krasnopolskiy@gmail.com>"]
description = ""
name = "lab4"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aio-pika = "^9.4.1"
alembic = "^1.13.1"
fastapi = "^0.110.0"
mimesis = "^15.1.0"
mysqlclient = "^2.2.4"
pika-stubs = "^0.1.3"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
python = "^3.11"
sqlalchemy = "^2.0.29"
uvicorn = "^0.29.0"
loguru = "^0.7.2"
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
aiohttp = "^3.9.3"
black = "^24.3.0"
isort = "^5.13.2"
toml-sort = "^0.23.1"
pytest = "^8.1.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
exclude = '(\.git|\.cache|\.venv|\.idea|__pycache__)'
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
skip = ["**/__pycache__/**", ".cache", ".git", ".idea", ".venv"]
